--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "file-saver": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.9.0",
     "styled-components": "^5.3.9"
   },
