--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "axios": "^1.3.4",
     "file-saver": "^2.0.5",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-loader-spinner": "^5.3.4",
+    "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.9.0",
     "styled-components": "^5.3.9"
   },
@@ -21,6 +24,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "dotenv": "^16.0.3",
     "vite": "^4.2.0"
   }
 }
